# Safe-Coder

./: .gitignore  AGENT_MODE_CHECKLIST.md  AGENT_MODE_SIDEBAR.md  AGENT_MODE_SUMMARY.md  AGENT_MODE_VISUAL_GUIDE.md  BUILD_PLAN_ANALYSIS.md  BUILD_PLAN_MODES_ANALYSIS.md  CHANGELOG.md  CYBERPUNK_THEME.md  Cargo.toml  DEMO_TUI.txt  DOCKER_BACKEND.md  GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUCCESS.md  INTEGRATION_TESTS_SUMMARY.md  LSP_FEATURES.md  NEW_COLOR_SCHEME.md  NEW_TUI_DESIGN.md  OLLAMA_SETUP.md  PLANNING_COMPARISON.md  QWEN_CODE_FEATURES.md  README.md  REQUEST_OPTIMIZATION_SUMMARY.md  SIMPLIFIED_ARCHITECTURE.md  STEPS_FEATURE.md  STEPS_IMPLEMENTATION_SUMMARY.md  STEPS_VISUAL_GUIDE.md  STREAMING_ORCHESTRATION_SUMMARY.md  STYLING_GUIDE.md  TUI_FEATURES.md  UNIFIED_PLANNING_CHECKLIST.md  UNIFIED_PLANNING_INTEGRATION_ANALYSIS.md  VM_ISOLATION.md  config.example.toml  safecoder.example.json  setup-firecracker.sh
.github/workflows/: release-desktop.yml  release.yml
desktop/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/scripts/: build-server.sh  dev-server.sh  stop-server.sh
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  main.rs
desktop/src/api/: client.ts
desktop/src/components/changes/: DiffViewer.tsx
desktop/src/components/chat/: AssistantMessage.tsx  DoomLoopModal.tsx  MessageList.tsx  ThinkingIndicator.tsx  UserMessage.tsx
desktop/src/components/input/: ChatInput.tsx
desktop/src/components/layout/: AppLayout.tsx  ChangesPanel.tsx  ChatPanel.tsx  Sidebar.tsx
desktop/src/components/sidebar/: SessionList.tsx
desktop/src/components/terminal/: TerminalPanel.tsx
desktop/src/hooks/: useSSE.ts
desktop/src/lib/: utils.ts
desktop/src/stores/: sessionStore.ts  uiStore.ts
desktop/src/styles/: globals.css
desktop/src/types/: index.ts
docs/: ARCHITECTURE.md  self_orchestration_guide.md
examples/: self_orchestration_config.rs  self_orchestration_demo.rs  test_streaming.rs
scripts/: run-integration-tests.sh
src/: config.rs  config.rs.bak  lib.rs  main.rs  utils.rs
src/approval/: mod.rs
src/auth/: anthropic.rs  github_copilot.rs  mod.rs
src/cache/: mod.rs  store.rs
src/checkpoint/: mod.rs
src/client/: mod.rs
src/commands/: at_command.rs  live_orchestration.rs  mod.rs  parser.rs  self_orchestration.rs  shell.rs  slash.rs
src/context/: mod.rs
src/custom_commands/: mod.rs
src/git/: mod.rs
src/hooks/: builtin.rs  manager.rs  mod.rs  types.rs
src/isolation/: docker.rs  firecracker.rs  mod.rs
src/llm/: anthropic.rs  cached.rs  copilot.rs  mod.rs  models.rs  ollama.rs  openai.rs  openai_compat.rs  openai_generic.rs  openrouter.rs
src/loop_detector/: mod.rs
src/lsp/: client.rs  config.rs  download.rs  manager.rs  mod.rs  protocol.rs
src/mcp/: client.rs  config.rs  mod.rs  tool.rs
src/memory/: mod.rs
src/orchestrator/: live_orchestration.rs  mod.rs  planner.rs  self_orchestration.rs  streaming_worker.rs  task.rs  worker.rs  workspace.rs
src/permissions/: mod.rs
src/persistence/: db.rs  event_log.rs  mod.rs  models.rs
src/planning/: complexity.rs  executor.rs  mod.rs  planner.rs  types.rs
src/prompts/: mod.rs
src/server/: mod.rs  state.rs  types.rs
src/server/routes/: config.rs  events.rs  files.rs  health.rs  messages.rs  mod.rs  openapi.rs  pty.rs  sessions.rs
src/session/: mod.rs
src/shell/: mod.rs
src/skills/: mod.rs
src/subagent/: executor.rs  mod.rs  prompts.rs  tool.rs  types.rs
src/tools/: ast_grep.rs  bash.rs  build_config.rs  code_search.rs  edit.rs  git.rs  glob.rs  grep.rs  list.rs  mod.rs  orchestrate.rs  read.rs  subagent.rs  todo.rs  webfetch.rs  write.rs
src/tui/: app.rs  autocomplete.rs  banner.rs  enhanced_ui.rs  file_picker.rs  markdown.rs  messages.rs  mod.rs  model_picker.rs  shell_app.rs  shell_runner.rs  shell_ui.rs  shimmer.rs  sidebar.rs  spinner.rs  styled_components.rs  theme.rs  theme_manager.rs  ui.rs
src/unified_planning/: executor_trait.rs  integration.rs  mod.rs  planner.rs  runner.rs  types.rs
src/unified_planning/executors/: direct.rs  direct_simple.rs  mod.rs  orchestration.rs  subagent.rs
src/vm/: mod.rs
tests/: config_tests.rs  tools_tests.rs
tests/integration/: README.md  ast_grep_tests.rs  cli_tests.rs  common.rs  config_tests.rs  git_tests.rs  hooks_tests.rs  llm_tests.rs  main.rs  orchestrator_tests.rs  session_tests.rs  simple_tests.rs  skills_tests.rs  subagent_config_tests.rs  tools_tests.rs
