[package]
name = "safe-coder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "5.0"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"
nix = { version = "0.29", features = ["process", "signal"] }
tempfile = "3.14"
ratatui = "0.29"
crossterm = "0.28"
syntect = "5.2"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
textwrap = "0.16"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
glob = "0.3"
