[features]
default = []
enhanced-styling = ["palette", "colorsys"]

[package]
name = "safe-coder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "safe-coder"
path = "src/main.rs"

[lib]
name = "safe_coder"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "5.0"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"
nix = { version = "0.29", features = ["process", "signal"] }
tempfile = "3.14"
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"
syntect = "5.2"
palette = { version = "0.7", optional = true }
colorsys = { version = "0.6", optional = true }
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
textwrap = "0.16"
pulldown-cmark = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
glob = "0.3"
walkdir = "2.5"
regex = "1.10"
grep = "0.3"
ignore = "0.4"
lazy_static = "1.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2.5"
similar = "2.3"
which = "7.0"
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
rmcp = { version = "0.9", features = ["client", "transport-child-process", "transport-io"] }
streaming-iterator = "0.1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
atty = "0.2"
arboard = { version = "3.4", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# HTTP Server (for desktop app)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
portable-pty = "0.8"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"
wiremock = "0.5"
assert_fs = "1.1"
predicates = "3.1"
once_cell = "1.20"
serial_test = "3.1"
